pyjsg/parser/jsgParser.py
# Generated from jsgParser.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class jsgParser ( Parser ):

    grammarFileName = "jsgParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'@terminals'", "'.TYPE'", 
                     "'.IGNORE'", "'->'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='" ]

    symbolicNames = [ "<INVALID>", "LEXER_ID_REF", "ID", "STRING", "INT", 
                      "ANY", "TERMINALS", "TYPE", "IGNORE", "MAPSTO", "JSON_STRING", 
                      "JSON_NUMBER", "JSON_INT", "JSON_BOOL", "JSON_NULL", 
                      "JSON_ARRAY", "JSON_OBJECT", "OBRACKET", "CBRACKET", 
                      "SEMI", "DASH", "OBRACE", "CBRACE", "COMMA", "STAR", 
                      "QMARK", "PLUS", "OPREN", "CPREN", "BAR", "COLON", 
                      "EQUALS", "PASS", "COMMENT", "LEXER_ID", "LEXER_CHAR_SET", 
                      "LEXER_PASS", "LEXER_COMMENT" ]

    RULE_doc = 0
    RULE_typeDirective = 1
    RULE_typeExceptions = 2
    RULE_ignoreDirective = 3
    RULE_grammarElt = 4
    RULE_objectDef = 5
    RULE_objectExpr = 6
    RULE_membersDef = 7
    RULE_altMembersDef = 8
    RULE_pairDef = 9
    RULE_name = 10
    RULE_arrayDef = 11
    RULE_arrayExpr = 12
    RULE_objectMacro = 13
    RULE_valueTypeMacro = 14
    RULE_builtinValueType = 15
    RULE_valueType = 16
    RULE_nonRefValueType = 17
    RULE_typeAlternatives = 18
    RULE_idref = 19
    RULE_ebnfSuffix = 20
    RULE_lexerRules = 21
    RULE_lexerRuleSpec = 22
    RULE_lexerRuleBlock = 23
    RULE_lexerAltList = 24
    RULE_lexerAlt = 25
    RULE_lexerElements = 26
    RULE_lexerElement = 27
    RULE_lexerBlock = 28
    RULE_lexerAtom = 29
    RULE_lexerTerminal = 30

    ruleNames =  [ "doc", "typeDirective", "typeExceptions", "ignoreDirective", 
                   "grammarElt", "objectDef", "objectExpr", "membersDef", 
                   "altMembersDef", "pairDef", "name", "arrayDef", "arrayExpr", 
                   "objectMacro", "valueTypeMacro", "builtinValueType", 
                   "valueType", "nonRefValueType", "typeAlternatives", "idref", 
                   "ebnfSuffix", "lexerRules", "lexerRuleSpec", "lexerRuleBlock", 
                   "lexerAltList", "lexerAlt", "lexerElements", "lexerElement", 
                   "lexerBlock", "lexerAtom", "lexerTerminal" ]

    EOF = Token.EOF
    LEXER_ID_REF=1
    ID=2
    STRING=3
    INT=4
    ANY=5
    TERMINALS=6
    TYPE=7
    IGNORE=8
    MAPSTO=9
    JSON_STRING=10
    JSON_NUMBER=11
    JSON_INT=12
    JSON_BOOL=13
    JSON_NULL=14
    JSON_ARRAY=15
    JSON_OBJECT=16
    OBRACKET=17
    CBRACKET=18
    SEMI=19
    DASH=20
    OBRACE=21
    CBRACE=22
    COMMA=23
    STAR=24
    QMARK=25
    PLUS=26
    OPREN=27
    CPREN=28
    BAR=29
    COLON=30
    EQUALS=31
    PASS=32
    COMMENT=33
    LEXER_ID=34
    LEXER_CHAR_SET=35
    LEXER_PASS=36
    LEXER_COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DocContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(jsgParser.EOF, 0)

        def typeDirective(self):
            return self.getTypedRuleContext(jsgParser.TypeDirectiveContext,0)


        def ignoreDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsgParser.IgnoreDirectiveContext)
            else:
                return self.getTypedRuleContext(jsgParser.IgnoreDirectiveContext,i)


        def grammarElt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsgParser.GrammarEltContext)
            else:
                return self.getTypedRuleContext(jsgParser.GrammarEltContext,i)


        def lexerRules(self):
            return self.getTypedRuleContext(jsgParser.LexerRulesContext,0)


        def getRuleIndex(self):
            return jsgParser.RULE_doc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoc" ):
                return visitor.visitDoc(self)
            else:
                return visitor.visitChildren(self)




    def doc(self):

        localctx = jsgParser.DocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_doc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jsgParser.TYPE:
                self.state = 62
                self.typeDirective()


            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsgParser.IGNORE:
                self.state = 65
                self.ignoreDirective()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsgParser.ID:
                self.state = 71
                self.grammarElt()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jsgParser.TERMINALS:
                self.state = 77
                self.lexerRules()


            self.state = 80
            self.match(jsgParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeDirectiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(jsgParser.TYPE, 0)

        def name(self):
            return self.getTypedRuleContext(jsgParser.NameContext,0)


        def SEMI(self):
            return self.getToken(jsgParser.SEMI, 0)

        def typeExceptions(self):
            return self.getTypedRuleContext(jsgParser.TypeExceptionsContext,0)


        def getRuleIndex(self):
            return jsgParser.RULE_typeDirective

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDirective" ):
                return visitor.visitTypeDirective(self)
            else:
                return visitor.visitChildren(self)




    def typeDirective(self):

        localctx = jsgParser.TypeDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_typeDirective)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(jsgParser.TYPE)
            self.state = 83
            self.name()
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jsgParser.DASH:
                self.state = 84
                self.typeExceptions()


            self.state = 87
            self.match(jsgParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeExceptionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DASH(self):
            return self.getToken(jsgParser.DASH, 0)

        def idref(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsgParser.IdrefContext)
            else:
                return self.getTypedRuleContext(jsgParser.IdrefContext,i)


        def getRuleIndex(self):
            return jsgParser.RULE_typeExceptions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeExceptions" ):
                return visitor.visitTypeExceptions(self)
            else:
                return visitor.visitChildren(self)




    def typeExceptions(self):

        localctx = jsgParser.TypeExceptionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeExceptions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(jsgParser.DASH)
            self.state = 91 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 90
                self.idref()
                self.state = 93 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==jsgParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IgnoreDirectiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IGNORE(self):
            return self.getToken(jsgParser.IGNORE, 0)

        def SEMI(self):
            return self.getToken(jsgParser.SEMI, 0)

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsgParser.NameContext)
            else:
                return self.getTypedRuleContext(jsgParser.NameContext,i)


        def getRuleIndex(self):
            return jsgParser.RULE_ignoreDirective

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIgnoreDirective" ):
                return visitor.visitIgnoreDirective(self)
            else:
                return visitor.visitChildren(self)




    def ignoreDirective(self):

        localctx = jsgParser.IgnoreDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ignoreDirective)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(jsgParser.IGNORE)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsgParser.ID or _la==jsgParser.STRING:
                self.state = 96
                self.name()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(jsgParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GrammarEltContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def objectDef(self):
            return self.getTypedRuleContext(jsgParser.ObjectDefContext,0)


        def arrayDef(self):
            return self.getTypedRuleContext(jsgParser.ArrayDefContext,0)


        def objectMacro(self):
            return self.getTypedRuleContext(jsgParser.ObjectMacroContext,0)


        def valueTypeMacro(self):
            return self.getTypedRuleContext(jsgParser.ValueTypeMacroContext,0)


        def getRuleIndex(self):
            return jsgParser.RULE_grammarElt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarElt" ):
                return visitor.visitGrammarElt(self)
            else:
                return visitor.visitChildren(self)




    def grammarElt(self):

        localctx = jsgParser.GrammarEltContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_grammarElt)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.objectDef()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.arrayDef()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.objectMacro()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.valueTypeMacro()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjectDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(jsgParser.ID, 0)

        def objectExpr(self):
            return self.getTypedRuleContext(jsgParser.ObjectExprContext,0)


        def getRuleIndex(self):
            return jsgParser.RULE_objectDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectDef" ):
                return visitor.visitObjectDef(self)
            else:
                return visitor.visitChildren(self)




    def objectDef(self):

        localctx = jsgParser.ObjectDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_objectDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(jsgParser.ID)
            self.state = 111
            self.objectExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjectExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBRACE(self):
            return self.getToken(jsgParser.OBRACE, 0)

        def CBRACE(self):
            return self.getToken(jsgParser.CBRACE, 0)

        def membersDef(self):
            return self.getTypedRuleContext(jsgParser.MembersDefContext,0)


        def MAPSTO(self):
            return self.getToken(jsgParser.MAPSTO, 0)

        def valueType(self):
            return self.getTypedRuleContext(jsgParser.ValueTypeContext,0)


        def LEXER_ID_REF(self):
            return self.getToken(jsgParser.LEXER_ID_REF, 0)

        def JSON_STRING(self):
            return self.getToken(jsgParser.JSON_STRING, 0)

        def ANY(self):
            return self.getToken(jsgParser.ANY, 0)

        def ebnfSuffix(self):
            return self.getTypedRuleContext(jsgParser.EbnfSuffixContext,0)


        def getRuleIndex(self):
            return jsgParser.RULE_objectExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectExpr" ):
                return visitor.visitObjectExpr(self)
            else:
                return visitor.visitChildren(self)




    def objectExpr(self):

        localctx = jsgParser.ObjectExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_objectExpr)
        self._la = 0 # Token type
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(jsgParser.OBRACE)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsgParser.ID) | (1 << jsgParser.STRING) | (1 << jsgParser.OPREN))) != 0):
                    self.state = 114
                    self.membersDef()


                self.state = 117
                self.match(jsgParser.CBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(jsgParser.OBRACE)
                self.state = 119
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsgParser.LEXER_ID_REF) | (1 << jsgParser.ANY) | (1 << jsgParser.JSON_STRING))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 120
                self.match(jsgParser.MAPSTO)
                self.state = 121
                self.valueType()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsgParser.OBRACE) | (1 << jsgParser.STAR) | (1 << jsgParser.QMARK) | (1 << jsgParser.PLUS))) != 0):
                    self.state = 122
                    self.ebnfSuffix()


                self.state = 125
                self.match(jsgParser.CBRACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MembersDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pairDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsgParser.PairDefContext)
            else:
                return self.getTypedRuleContext(jsgParser.PairDefContext,i)


        def BAR(self, i:int=None):
            if i is None:
                return self.getTokens(jsgParser.BAR)
            else:
                return self.getToken(jsgParser.BAR, i)

        def altMembersDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsgParser.AltMembersDefContext)
            else:
                return self.getTypedRuleContext(jsgParser.AltMembersDefContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(jsgParser.COMMA)
            else:
                return self.getToken(jsgParser.COMMA, i)

        def getRuleIndex(self):
            return jsgParser.RULE_membersDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMembersDef" ):
                return visitor.visitMembersDef(self)
            else:
                return visitor.visitChildren(self)




    def membersDef(self):

        localctx = jsgParser.MembersDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_membersDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 129
                self.pairDef()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==jsgParser.COMMA:
                    self.state = 130
                    self.match(jsgParser.COMMA)


                self.state = 135 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsgParser.ID) | (1 << jsgParser.STRING) | (1 << jsgParser.OPREN))) != 0)):
                    break

            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsgParser.BAR:
                self.state = 137
                self.match(jsgParser.BAR)
                self.state = 138
                self.altMembersDef()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AltMembersDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pairDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsgParser.PairDefContext)
            else:
                return self.getTypedRuleContext(jsgParser.PairDefContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(jsgParser.COMMA)
            else:
                return self.getToken(jsgParser.COMMA, i)

        def getRuleIndex(self):
            return jsgParser.RULE_altMembersDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAltMembersDef" ):
                return visitor.visitAltMembersDef(self)
            else:
                return visitor.visitChildren(self)




    def altMembersDef(self):

        localctx = jsgParser.AltMembersDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_altMembersDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsgParser.ID) | (1 << jsgParser.STRING) | (1 << jsgParser.OPREN))) != 0):
                self.state = 144
                self.pairDef()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==jsgParser.COMMA:
                    self.state = 145
                    self.match(jsgParser.COMMA)


                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PairDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsgParser.NameContext)
            else:
                return self.getTypedRuleContext(jsgParser.NameContext,i)


        def COLON(self):
            return self.getToken(jsgParser.COLON, 0)

        def valueType(self):
            return self.getTypedRuleContext(jsgParser.ValueTypeContext,0)


        def ebnfSuffix(self):
            return self.getTypedRuleContext(jsgParser.EbnfSuffixContext,0)


        def idref(self):
            return self.getTypedRuleContext(jsgParser.IdrefContext,0)


        def OPREN(self):
            return self.getToken(jsgParser.OPREN, 0)

        def CPREN(self):
            return self.getToken(jsgParser.CPREN, 0)

        def getRuleIndex(self):
            return jsgParser.RULE_pairDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPairDef" ):
                return visitor.visitPairDef(self)
            else:
                return visitor.visitChildren(self)




    def pairDef(self):

        localctx = jsgParser.PairDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pairDef)
        self._la = 0 # Token type
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.name()
                self.state = 154
                self.match(jsgParser.COLON)
                self.state = 155
                self.valueType()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsgParser.OBRACE) | (1 << jsgParser.STAR) | (1 << jsgParser.QMARK) | (1 << jsgParser.PLUS))) != 0):
                    self.state = 156
                    self.ebnfSuffix()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.idref()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsgParser.OBRACE) | (1 << jsgParser.STAR) | (1 << jsgParser.QMARK) | (1 << jsgParser.PLUS))) != 0):
                    self.state = 160
                    self.ebnfSuffix()


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.match(jsgParser.OPREN)
                self.state = 165 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 164
                    self.name()
                    self.state = 167 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==jsgParser.ID or _la==jsgParser.STRING):
                        break

                self.state = 169
                self.match(jsgParser.CPREN)
                self.state = 170
                self.match(jsgParser.COLON)
                self.state = 171
                self.valueType()
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsgParser.OBRACE) | (1 << jsgParser.STAR) | (1 << jsgParser.QMARK) | (1 << jsgParser.PLUS))) != 0):
                    self.state = 172
                    self.ebnfSuffix()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(jsgParser.ID, 0)

        def STRING(self):
            return self.getToken(jsgParser.STRING, 0)

        def getRuleIndex(self):
            return jsgParser.RULE_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = jsgParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            _la = self._input.LA(1)
            if not(_la==jsgParser.ID or _la==jsgParser.STRING):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(jsgParser.ID, 0)

        def arrayExpr(self):
            return self.getTypedRuleContext(jsgParser.ArrayExprContext,0)


        def getRuleIndex(self):
            return jsgParser.RULE_arrayDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayDef" ):
                return visitor.visitArrayDef(self)
            else:
                return visitor.visitChildren(self)




    def arrayDef(self):

        localctx = jsgParser.ArrayDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arrayDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(jsgParser.ID)
            self.state = 180
            self.arrayExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBRACKET(self):
            return self.getToken(jsgParser.OBRACKET, 0)

        def valueType(self):
            return self.getTypedRuleContext(jsgParser.ValueTypeContext,0)


        def CBRACKET(self):
            return self.getToken(jsgParser.CBRACKET, 0)

        def ebnfSuffix(self):
            return self.getTypedRuleContext(jsgParser.EbnfSuffixContext,0)


        def getRuleIndex(self):
            return jsgParser.RULE_arrayExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayExpr" ):
                return visitor.visitArrayExpr(self)
            else:
                return visitor.visitChildren(self)




    def arrayExpr(self):

        localctx = jsgParser.ArrayExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arrayExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(jsgParser.OBRACKET)
            self.state = 183
            self.valueType()
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsgParser.OBRACE) | (1 << jsgParser.STAR) | (1 << jsgParser.QMARK) | (1 << jsgParser.PLUS))) != 0):
                self.state = 184
                self.ebnfSuffix()


            self.state = 187
            self.match(jsgParser.CBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjectMacroContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(jsgParser.ID, 0)

        def EQUALS(self):
            return self.getToken(jsgParser.EQUALS, 0)

        def membersDef(self):
            return self.getTypedRuleContext(jsgParser.MembersDefContext,0)


        def SEMI(self):
            return self.getToken(jsgParser.SEMI, 0)

        def getRuleIndex(self):
            return jsgParser.RULE_objectMacro
